# TreeSitterSharp

./: .editorconfig  .gitignore  .gitmodules  Directory.Build.props  Directory.Packages.props  README.md  TreeSitterSharp.code-workspace  TreeSitterSharp.sln  api.md  build-native.ps1  build.ps1  dotnet-releaser.toml  global.json  nuget.config  publish.ps1
.github/workflows/: build-managed.yml  build-native.yml  build.yml  release-managed.yml  release-native.yml  release.yml
native/: Directory.Build.props  NativeLibrary.csproj  native.csproj
native/crossfiles/: linux-arm64.txt  linux-x64.txt  osx-arm64.txt  osx-x64.txt  win-arm64.txt  win-x64.txt  win-x86.txt
native/nuspecs/: .gitignore  LICENSE.txt  libtree-sitter-c.nuspec  libtree-sitter-c.runtime.linux-arm64.nuspec  libtree-sitter-c.runtime.linux-x64.nuspec  libtree-sitter-c.runtime.osx-arm64.nuspec  libtree-sitter-c.runtime.osx-x64.nuspec  libtree-sitter-c.runtime.win-arm64.nuspec  libtree-sitter-c.runtime.win-x64.nuspec  libtree-sitter-c.runtime.win-x86.nuspec  libtree-sitter-cpp.nuspec  libtree-sitter-cpp.runtime.linux-arm64.nuspec  libtree-sitter-cpp.runtime.linux-x64.nuspec  libtree-sitter-cpp.runtime.osx-arm64.nuspec  libtree-sitter-cpp.runtime.osx-x64.nuspec  libtree-sitter-cpp.runtime.win-arm64.nuspec  libtree-sitter-cpp.runtime.win-x64.nuspec  (+25 more)
native/sources/tree-sitter/: meson.build  tree-sitter.def
scripts/: Build-Parser.ps1  Generate-MainNuspec.ps1  Generate-Nuspec.ps1  Get-GitVersion.ps1  build-native.ps1  build.ps1  build.psm1  generate-nuspecs.ps1
src/: Directory.Build.props
(+150 files in other folders)
